--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </p>
           </div>
           <div class="col-12 col-md-6">
-            <img src="assets/gprek1.jpeg" alt="geprek" class="img-fluid w-100" data-aos="flip-down" />
+            <img src="assets/gprek1.jpeg" alt="geprek" class="img-fluid w-100 rounded" data-aos="flip-down" />
           </div>
         </div>
       </section>
