--- a/index.html
+++ b/index.html
@@ -42,13 +42,30 @@
 
       .hero {
         background-image: url("assets/fotoayam.png");
-        min-height: 40rem;
+        height: 100dvb;
 
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        overflow: hidden;
       }
+
+      .hero::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5); /* Ubah warna dan opacity sesuai kebutuhan */
+        z-index: 1; /* Pastikan overlay berada di atas gambar */
+    }
+    
+    .hero > * {
+        position: relative;
+        z-index: 2; /* Pastikan konten tetap terlihat di atas overlay */
+    }
 
       .head-text {
         font-family: "Trade Winds", "Sans-Serif";
@@ -57,8 +74,7 @@
         padding: 0;
         line-height: 1;
 
-        -webkit-text-stroke-width: 1px;
-        -webkit-text-stroke-color: red;
+        font-size: 4rem;
       }
 
       .nav-trans {
@@ -68,14 +84,6 @@
 
       .navbar {
         transition: all 1s;
-      }
-
-      .gprk {
-        font-size: 4rem;
-      }
-
-      .cbdy {
-        font-size: 5rem;
       }
 
       .accordion {
@@ -163,21 +171,18 @@
         transition: opacity 0.5s, visibility 0.5s;
       }
 
-      @media only screen and (min-width: 769px) and (max-width: 1024px) {
+      @media only screen and (max-width: 1024px) {
+        .head-text {
+          font-size: 2rem;
+        }
       }
 
       @media only screen and (min-width: 601px) and (max-width: 768px) {
-        /* Styles for small devices */
+
       }
 
       @media only screen and (max-width: 600px) {
-        .gprk {
-          font-size: 2rem;
-        }
 
-        .cbdy {
-          font-size: 3rem;
-        }
       }
     </style>
     <title>Ayam Geprek Cibaduyut</title>
@@ -212,9 +217,40 @@
     </nav>
 
     <div data-bs-spy="scroll" data-bs-target="#navbar" tabindex="0" data-bs-root-margin="0px 0px -40%">
-      <section id="home" class="hero d-flex flex-column align-items-center justify-content-center">
-        <p class="head-text gprk text-white" data-aos="fade-down">AYAM GEPREK</p>
-        <p class="head-text cbdy text-white" data-aos="fade-left">CIBADUYUT</p>
+
+      <section id="home" class="hero d-flex align-items-center">
+        <div class="container">
+
+
+        <div class="row">
+          <div class="col-lg-6 col-12 pt-5">
+            <p class="head-text text-white pt-lg-5" data-aos="fade-down">AYAM GEPREK</p>
+            <p class="head-text text-white" data-aos="fade-left">CIBADUYUT</p>
+            <p class="py-2 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos earum dignissimos ab, fuga ut quae incidunt repellat aperiam ex enim!</p>
+            <a href="#menu" class="btn btn-outline-light">Menu kami</a>
+          </div>
+          <div class="col-lg-4 d-lg-flex d-none justify-content-center align-items-center">
+            <img src="assets/LOGOS.png" alt="geprek logo" class="img-fluid">
+          </div>
+          <div class="col-lg-2 col-12">
+            <div class="row gap-lg-5 pt-5">
+              <div class="col-lg-12 col-4">
+                <p class="text-white fs-3 fw-bold p-0 m-0">10+</p>
+                <p class="text-white p-0 m-0">Pelanggan Setia</p>
+              </div>
+              <div class="col-lg-12 col-4">
+                <p class="text-white fs-3 fw-bold p-0 m-0">5+</p>
+                <p class="text-white p-0 m-0">Variasi Menu</p>
+              </div>
+              <div class="col-lg-12 col-4">
+                <p class="text-white fs-3 fw-bold p-0 m-0">4.50 <span class="text-warning">&#9733;</span></p>
+                <p class="text-white p-0 m-0">Rating Bagus!</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
       </section>
 
       <section id="about" class="container px-5" style="padding-top: 7rem">
@@ -232,6 +268,7 @@
           </div>
         </div>
       </section>
+
 
       <section id="menu" class="container" style="padding-top: 7rem">
         <h1 class="text-center" style="font-family: 'Trade Winds'" data-aos="fade-down">MENU</h1>
@@ -580,6 +617,7 @@
         </div>
       </section>
 
+
       <section id="faq" class="container" style="padding-top: 7rem">
         <h1 class="text-center mb-5" style="font-family: 'Trade Winds'" data-aos="fade-down" data-aos-duration="1000">Frequently Asked Question</h1>
 
@@ -729,6 +767,10 @@
         pagination: {
           el: ".swiper-pagination",
           clickable: true,
+        },
+        autoplay: {
+          delay: 2500,
+          disableOnInteraction: false,
         },
         breakpoints: {
           640: {
