--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         left: 0;
         width: 100%;
         height: 100dvh;
-        background: rgba(0, 0, 0, 0.5); /* Ubah warna dan opacity sesuai kebutuhan */
+        background: rgba(0, 0, 0, 0.7); /* Ubah warna dan opacity sesuai kebutuhan */
         z-index: 1; /* Pastikan overlay berada di atas gambar */
       }
 
@@ -229,7 +229,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 col-12 pt-5">
-              <p class="head-text text-white pt-lg-5" data-aos="fade-down">AYAM GEPREK</p>
+              <p class="head-text pt-lg-5" style="color: red;" data-aos="fade-down">AYAM GEPREK</p>
               <p class="head-text text-white" data-aos="fade-left">CIBADUYUT</p>
               <p class="py-2 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos earum dignissimos ab, fuga ut quae incidunt repellat aperiam ex enim!</p>
               <a href="#menu" class="btn btn-outline-light">Menu kami</a>
