--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
         background-size: cover;
         overflow: hidden;
       }
+      .accordion-item {
+        background-color: #fff;
+        border-radius: 7px;
+      }
 
       #splash-screen {
         position: fixed;
