--- a/index.html
+++ b/index.html
@@ -219,6 +219,20 @@
         border-radius: 7px;
       }
 
+
+      .cd-i-info {
+        font-size: 3rem; 
+        padding: 1rem 0px;
+      }
+
+      .cd-p-info {
+        font-size: 1.3rem;
+      }
+
+      .cd-p2-info {
+        font-size:1rem;
+      }
+
       #splash-screen {
         position: fixed;
         width: 100%;
@@ -314,10 +328,10 @@
       <div style="background-color: #f0f2f3">
         <section id="about" class="container px-5" style="padding-top: 7rem">
           <div class="row">
-            <div class="col-12 col-md-6 order-md-2">
+            <div class="col-12 col-lg-6 order-lg-2">
               <img src="assets/gprek1.jpeg" alt="geprek" class="img-fluid w-100 rounded" data-aos="flip-down" />
             </div>
-            <div class="col-12 col-md-6 order-md-1">
+            <div class="col-12 col-lg-6 order-lg-1">
               <p class="fs-1" style="font-family: 'Trade Winds'; color: red" data-aos="fade-right">Tentang kami</p>
               <p data-aos="fade-right">Ayam Geprek Cibaduyut adalah sebuah usaha kecil yang didirikan oleh siswa-siswa SMKN 4 Bandar Lampung, yaitu Riandra, Denis, Paksi, Agung, Nabiel, dan Farel.</p>
               <p data-aos="fade-right">Usaha ini dibentuk sebagai bagian dari tugas PKWU (Praktik Kewirausahaan) dengan tujuan mengembangkan keterampilan kewirausahaan para siswa.</p>
@@ -334,27 +348,27 @@
               <div class="swiper-slide">
                 <div data-aos="fade-left">
                   <div class="border rounded infor p-3 text-center w-100">
-                    <i class="fa-solid fa-paper-plane" style="font-size: 4rem; padding: 1rem 0px"></i>
-                    <p class="fs-5 fw-bold">Antar Jemput Pesanan</p>
-                    <p>Kami menyediakan layanan untuk antar jemput pesanan anda.</p>
+                    <i class="fa-solid fa-paper-plane cd-i-info"></i>
+                    <p class="fw-bold cd-p-info">Antar Jemput Pesanan</p>
+                    <p class="cd-p2-info">Kami menyediakan layanan untuk antar jemput pesanan anda.</p>
                   </div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div data-aos="fade-down">
                   <div class="border rounded infor p-3 text-center w-100">
-                    <i class="fa-solid fa-credit-card" style="font-size: 4rem; padding: 1rem 0px"></i>
-                    <p class="fs-5 fw-bold">Debit Card</p>
-                    <p>Kami menyediakan pembayaran via kartu debit.</p>
+                    <i class="fa-solid fa-credit-card cd-i-info"></i>
+                    <p class="fw-bold cd-p-info">Debit Card</p>
+                    <p class="cd-p2-info">Kami menyediakan pembayaran via kartu debit.</p>
                   </div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div data-aos="fade-right">
                   <div class="border rounded infor p-3 text-center w-100">
-                    <i class="fa-solid fa-truck" style="font-size: 4rem; padding: 1rem 0px"></i>
-                    <p class="fs-5 fw-bold">Kami Menerima Pesanan</p>
-                    <p>Kami menerima pesanan untuk acara apapun. (Minimal H-2)</p>
+                    <i class="fa-solid fa-truck cd-i-info"></i>
+                    <p class="fw-bold cd-p-info">Kami Menerima Pesanan</p>
+                    <p class="cd-p2-info">Kami menerima pesanan untuk acara apapun. (Minimal H-2)</p>
                   </div>
                 </div>
               </div>
