--- a/index.html
+++ b/index.html
@@ -405,9 +405,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #ff0000; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Ayam Geprek</div>
                     <img src="assets/Geprekori.jpg" class="card-img-top zoom-img" alt="Geprek" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Ayam Geprek Original</p>
+                       <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                            <span>Ayam Geprek Original</span>
+                            <span>⭐5.0</span>
+                        </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 15.000</p>
-                      <p class="pt-1">⭐5.0</p>
                     </div>
                   </div>
                 </div>
@@ -417,9 +419,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #ff0000; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Ayam Geprek</div>
                     <img src="assets/geprekijo.jpeg" class="card-img-top zoom-img" alt="Geprek" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Ayam Geprek Sambel Ijo</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Ayam Geprek Sambel Ijo</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 15.000</p>
-                      <p class="pt-1">⭐3.0</p>
                     </div>
                   </div>
                 </div>
@@ -429,9 +433,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #ff0000; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Ayam Geprek</div>
                     <img src="assets/GEPREKMATAH.jpg" class="card-img-top zoom-img" alt="Geprek" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Ayam Geprek Matah</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Ayam Geprek Matah</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 15.000</p>
-                      <p class="pt-1">⭐4.0</p>
                     </div>
                   </div>
                 </div>
@@ -441,9 +447,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #ff0000; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Ayam Geprek</div>
                     <img src="assets/ayamgeprekkeju.jpg" class="card-img-top zoom-img" alt="Geprek" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Ayam Geprek Mozarella</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Ayam Geprek Mozarella</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 18.000</p>
-                      <p class="pt-1">⭐5.0</p>
                     </div>
                   </div>
                 </div>
@@ -453,9 +461,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #ff8c00; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Sidedish</div>
                     <img src="assets/ususgeprel.jpeg" class="card-img-top zoom-img" alt="Usus Geprek" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Usus Geprek Original</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Usus Geprek Original</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 10.000</p>
-                      <p class="pt-1">⭐5.0</p>
                     </div>
                   </div>
                 </div>
@@ -465,9 +475,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #ff8c00; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Sidedish</div>
                     <img src="assets/lalapan.jpg" class="card-img-top zoom-img" alt="Lalapan" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Lalapan</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Lalapan</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 5.000</p>
-                      <p class="pt-1">⭐5.0</p>
                     </div>
                   </div>
                 </div>
@@ -477,9 +489,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #ff8c00; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Sidedish</div>
                     <img src="assets/tahutempe.png" class="card-img-top zoom-img" alt="Tahu Tempe" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Tahu Tempe</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Tahu Tempe</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 5.000</p>
-                      <p class="pt-1">⭐5.0</p>
                     </div>
                   </div>
                 </div>
@@ -489,9 +503,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #0088ff; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Minuman</div>
                     <img src="assets/airputih.jpg" class="card-img-top zoom-img" alt="Air Putih" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Air Putih Botol</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Air Putih Botol</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 5.000</p>
-                      <p class="pt-1">⭐5.0</p>
                     </div>
                   </div>
                 </div>
@@ -501,9 +517,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #0088ff; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Minuman</div>
                     <img src="assets/teh.jpeg" class="card-img-top zoom-img" alt="Teh Manis" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Teh Manis</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Teh Manis</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 5.000</p>
-                      <p class="pt-1">⭐4.0</p>
                     </div>
                   </div>
                 </div>
@@ -513,9 +531,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #0088ff; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Minuman</div>
                     <img src="assets/esjeruk.jpg" class="card-img-top zoom-img" alt="Es Jeruk" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Es Jeruk</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Es Jeruk</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 8.000</p>
-                      <p class="pt-1">⭐5.0</p>
                     </div>
                   </div>
                 </div>
@@ -531,9 +551,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #ff0000; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Ayam Geprek</div>
                     <img src="assets/Geprekori.jpg" class="card-img-top zoom-img" alt="Geprek" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Ayam Geprek Original</p>
+                       <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                            <span>Ayam Geprek Original</span>
+                            <span>⭐5.0</span>
+                        </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 15.000</p>
-                      <p class="pt-1">⭐5.0</p>
                     </div>
                   </div>
                 </div>
@@ -543,9 +565,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #ff0000; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Ayam Geprek</div>
                     <img src="assets/geprekijo.jpeg" class="card-img-top zoom-img" alt="Geprek" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Ayam Geprek Sambel Ijo</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Ayam Geprek Sambel Ijo</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 15.000</p>
-                      <p class="pt-1">⭐3.0</p>
                     </div>
                   </div>
                 </div>
@@ -555,9 +579,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #ff0000; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Ayam Geprek</div>
                     <img src="assets/GEPREKMATAH.jpg" class="card-img-top zoom-img" alt="Geprek" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Ayam Geprek Matah</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Ayam Geprek Matah</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 15.000</p>
-                      <p class="pt-1">⭐4.0</p>
                     </div>
                   </div>
                 </div>
@@ -567,9 +593,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #ff0000; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Ayam Geprek</div>
                     <img src="assets/ayamgeprekkeju.jpg" class="card-img-top zoom-img" alt="Geprek" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Ayam Geprek Mozarella</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Ayam Geprek Mozarella</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 18.000</p>
-                      <p class="pt-1">⭐5.0</p>
                     </div>
                   </div>
                 </div>
@@ -585,9 +613,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #ff8c00; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Sidedish</div>
                     <img src="assets/ususgeprel.jpeg" class="card-img-top zoom-img" alt="Usus Geprek" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Usus Geprek Original</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Usus Geprek Original</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 10.000</p>
-                      <p class="pt-1">⭐5.0</p>
                     </div>
                   </div>
                 </div>
@@ -597,9 +627,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #ff8c00; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Sidedish</div>
                     <img src="assets/lalapan.jpg" class="card-img-top zoom-img" alt="Lalapan" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Lalapan</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Lalapan</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 5.000</p>
-                      <p class="pt-1">⭐5.0</p>
                     </div>
                   </div>
                 </div>
@@ -609,9 +641,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #ff8c00; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Sidedish</div>
                     <img src="assets/tahutempe.png" class="card-img-top zoom-img" alt="Tahu Tempe" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Tahu Tempe</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Tahu Tempe</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 5.000</p>
-                      <p class="pt-1">⭐5.0</p>
                     </div>
                   </div>
                 </div>
@@ -627,9 +661,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #0088ff; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Minuman</div>
                     <img src="assets/airputih.jpg" class="card-img-top zoom-img" alt="Air Putih" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Air Putih Botol</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Air Putih Botol</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 5.000</p>
-                      <p class="pt-1">⭐5.0</p>
                     </div>
                   </div>
                 </div>
@@ -639,9 +675,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #0088ff; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Minuman</div>
                     <img src="assets/teh.jpeg" class="card-img-top zoom-img" alt="Teh Manis" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Teh Manis</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Teh Manis</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 5.000</p>
-                      <p class="pt-1">⭐4.0</p>
                     </div>
                   </div>
                 </div>
@@ -651,9 +689,11 @@
                     <div style="position: absolute; top: 10px; left: 10px; background-color: #0088ff; color: white; padding: 5px 10px; border-radius: 5px; z-index: 10">Minuman</div>
                     <img src="assets/esjeruk.jpg" class="card-img-top zoom-img" alt="Es Jeruk" />
                     <div class="card-body">
-                      <p class="card-title pb-0 mb-0">Es Jeruk</p>
+                      <p class="d-flex justify-content-between align-items-center pb-2 mb-0">
+                        <span>Es Jeruk</span>
+                        <span>⭐5.0</span>
+                    </p>
                       <p class="card-text pb-0 mb-0 fw-bold fs-6">Rp. 8.000</p>
-                      <p class="pt-1">⭐5.0</p>
                     </div>
                   </div>
                 </div>
@@ -1187,7 +1227,7 @@
       </div>
 
         <div style="background-color: #f0f2f3">
-        <section id="contact" class="container" style="padding-top: 7rem">
+        <section id="contact" class="container" style="padding-top: 7rem; padding-bottom: 4rem;">
           <h1 class="text-center mb-5" style="font-family: 'Trade Winds'; color: red" data-aos="fade-down" data-aos-duration="1000">Hubungi Kami</h1>
 
           <div class="text-center text-white rounded p-4" style="background-color: red" data-aos="zoom-in-up" data-aos-duration="1000">
