--- a/index.html
+++ b/index.html
@@ -255,11 +255,17 @@
         }
       }
 
-      @media only screen and (min-width: 601px) and (max-width: 768px) {
+      @media only screen and (min-width: 800px) and (max-width: 1000px) {
+        .faq-bg {
+          min-height: 50dvb;
+      }
       }
 
       @media only screen and (max-width: 600px) {
+        .faq-bg {
+          min-height: 80dvb;
       }
+    }
     </style>
     <title>Ayam Geprek Cibaduyut</title>
   </head>
